laporan_error.txt
=== PENYEBAB UTAMA MANIFEST MERGER GAGAL ===
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:processDebugManifestForPackage
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:processDebugJavaRes NO-SOURCE
> Task :app:processDebugResources
> Task :app:mergeDebugJavaResource

> Task :app:compileDebugJavaWithJavac FAILED
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/services/foreground/NovaForegroundService.java:43: error: constructor AutonomousLoopEngine in class AutonomousLoopEngine cannot be applied to given types;
        loopEngine = new AutonomousLoopEngine();
                     ^
  required: Context
  found:    no arguments
  reason: actual and formal argument lists differ in length
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/services/foreground/NovaForegroundService.java:44: error: cannot find symbol
        loopEngine.prepareEngine(this.getApplicationContext());
                  ^
  symbol:   method prepareEngine(Context)
  location: variable loopEngine of type AutonomousLoopEngine
Note: Some input files use or override a deprecated API.
